objects/DMAPP__DM_Strategy_Map__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Business_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set this reference points to the smart map which was used to bootstrap this map.</description>
        <inlineHelpText>If set this reference points to the smart map which was used to bootstrap this map</inlineHelpText>
        <label>Insight Smart Business Map</label>
        <referenceTo>DMAPP__Insight_Smart_Business_Map__c</referenceTo>
        <relationshipLabel>Strategy Maps</relationshipLabel>
        <relationshipName>Strategy_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipLabel>Strategy Maps</relationshipLabel>
        <relationshipName>DM_Strategy_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <label>Strategy Map</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>